parkrun-stats - Remove URL warnings.